# opus2

./: Cargo.toml  README.md
examples/: surround.rs
src/: lib.rs
tests/: fec.rs  opus-padding.rs  tests.rs
