[package]
name = "opus2"
version = "0.3.1"
authors = ["nemurubaka <cijiugechu@gmail.com>", "Tad Hardesty <tad@platymuus.com>"]

description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]
categories = ["api-bindings", "encoding", "compression",
	"multimedia::audio", "multimedia::encoding"]

repository = "https://github.com/cijiugechu/opus2"
documentation = "https://docs.rs/opus2"

edition = "2024"

[dependencies]
libopus_sys = "0.3"

[features]
default = ["static"]
static = ["libopus_sys/static"]
dynamic = ["libopus_sys/dynamic"]
